[project]
name = "wcpan-drive-synology"
version = "2.0.0a3"
description = "Synology Drive Web API integration for wcpan.drive"
authors = [
    { name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.13.0,<4.0.0",
    "pycryptodome>=3.0,<4.0",
    "wcpan-drive-core>=5.0.6,<6.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
server = [
    "pyyaml>=6.0,<7.0",
    "pymediainfo>=6.0,<7.0",
    "wcpan-logging>=2.1.0,<3.0.0",
]

[project.scripts]
"wcpan.drive.synology" = "wcpan.drive.synology.server._main:main"

[dependency-groups]
dev = [
    "coverage>=7.6.0,<8.0.0",
    "ruff>=0.15.0,<1.0.0",
    "wcpan-drive-synology[server]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcpan"]
